k8s/overlays/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: differ-staging
  labels:
    name: differ-staging
    environment: staging
