k8s/overlays/staging/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: differ
spec:
  hostnames:
    - staging-differ.bubtaylor.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab-gateway
      namespace: istio-ingress
      sectionName: https-staging-differ-bubtaylor-com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: differ-api
          port: 80
